Fix preview on small screens

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,6 +13,7 @@
   position: sticky;
   z-index: 10;
   top: 0;
+  @apply bg-zinc-100 dark:bg-gray-900;
 }
 
 .shiki {
